Addes samples for the presentation.
Added samples of records.
Added PatternMatching with instanceof examples.
Added demo for Helpful NPE messages.
Added multiline text blocks.
Added examples for switch expressions.
Added streaming JFR events.
Tuned README.
Small improvements to switch expressions.
Small changes to TextBlocks.
Small updates to equals comment.
Added main class in MANIFEST.MF
Tiny update to Records demo.
Added incubator module and copying dependencies in pom.xml.